--- a/static/scss/profile-image.scss
+++ b/static/scss/profile-image.scss
@@ -13,9 +13,9 @@
       background-color: rgba(0, 0, 0, 0.3);
       position: absolute;
       top: 0;
-      right: -2px;
+      right: 0;
       text-align: center;
-      line-height: 46px;
+      line-height: 41px;
 
       img {
         width: 22px;
